# rules_js-issue-node_modules-not-in-parent-directory

./: .gitignore  WORKSPACE
js/: package.json
src/: BUILD.bazel  require_acorn.js
